tests/positive/basic/safe_mod_nonzero/input.ci
void main() {
    print(toString(safeModInt(9, 4, -1)) + "\n");
}
