tests/negative/semantic/wrong_arg_count_byteat/input.ci
void main() {
    print(toString(byteAt("a")) + "\n");
}
